syntax = "proto3";

service gSystemRpc {
    rpc ping (ccSystemRpcFormat) returns (ReturnValues);
    rpc addPool (ccSystemRpcFormat) returns (ReturnCode);
    rpc addBlock (ccSystemRpcFormat) returns (ReturnCode);
    rpc addBlockCa3 (ccSystemRpcFormat) returns (ReturnCode);
    rpc getPoolHeight (ccSystemRpcFormat) returns (ReturnValues);
    rpc getBlockHeight (ccSystemRpcFormat) returns (ReturnValues);
    rpc getBlockDigest (ccSystemRpcFormat) returns (ReturnValues);
    rpc getBlock (ccSystemRpcFormat) returns (ReturnValues);
    rpc examineBlockDifference (ccSystemRpcFormat) returns (ReturnValues);
    rpc examinePoolDifference (ccSystemRpcFormat) returns (ReturnValues);
    rpc declareBlockCreation (ccSystemRpcFormat) returns (ReturnValues);
    rpc signAndResendOrStore (ccSystemRpcFormat) returns (ReturnValues);
    rpc resetTestNode (ccSystemRpcFormat) returns (ReturnCode);
}

message Param {
    optional string tenant = 1;
    optional bool removePool = 2;
    optional bool failIfUnhealthy = 3;
    optional bool returnUndefinedIfNoExistent = 4;
}
message ccSystemRpcFormat {
    int32 version = 1;
    string request = 2;
    Param param = 3;
    string dataAsString = 4;
}

message ReturnCode {
    int32 returnCode = 1;
}
message  ReturnValues {
    int32 returnCode = 1;
    string dataAsString = 2;
}
